# MyAWT

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/io/github/eurya/awt/: ExampleInstrumentedTest.kt
app/src/androidTest/java/io/github/eurya/myawt/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_log.hpp  awt_xawt.cpp  jre_launcher.cpp
app/src/main/java/io/github/eurya/awt/: AppModule.kt  MyApplication.kt
app/src/main/java/io/github/eurya/awt/data/: JavaConfig.kt  LaunchResult.kt  RuntimeLibrary.kt
app/src/main/java/io/github/eurya/awt/data/state/: AwtUiState.kt  (+1 more)
app/src/main/java/io/github/eurya/awt/exception/: JavaRuntimeException.kt
app/src/main/java/io/github/eurya/awt/manager/: JavaLauncherManager.kt  RuntimeLibraryManager.kt
app/src/main/java/io/github/eurya/awt/utils/: Architecture.kt  NativeJavaLauncher.kt
app/src/main/java/io/github/eurya/awt/viewmodel/: AwtViewModel.kt  InitViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/io/github/eurya/awt/: ExampleUnitTest.kt
app/src/test/java/io/github/eurya/myawt/: ExampleUnitTest.kt
cacio-argent/: build.gradle.kts
cacio-argent/src/main/java/io/github/eurya/cacio/: AgentConfig.java  CTCScreenWrapper.java  ClientEventTask.java  ScreenCaptureTask.java  ScreenStreamAgent.java  ScreenStreamServer.java
cacio-shared/: build.gradle.kts
cacio-tta/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
